chore(products - style): remove overflow hidden from the card and add it to the link wrapping the card's children to avoid hidden focus outline

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -341,7 +341,6 @@ body {
   flex-direction: column;
   width: 100%;
   height: 440px;
-  overflow: hidden;
   border-radius: 8px;
   background-color: var(--color-bg-card);
   color: var(--color-text-main);
@@ -369,6 +368,8 @@ body {
   flex-direction: column;
   width: 100%;
   height: 100%;
+  border-radius: inherit;
+  overflow: hidden;
 }
 .product__content {
   display: flex;
